Added install as binary + formatting

--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,5 @@
   "require": {
     "friendsofphp/php-cs-fixer": "^3"
   },
-  "scripts": {
-    "post-update-cmd": "./install.sh",
-    "post-install-cmd": "./install.sh"
-  }
+  "bin": ["code-reviewer"]
 }
